--- a/tensorflow_gpu.yml
+++ b/tensorflow_gpu.yml
@@ -18,9 +18,9 @@ dependencies:
   - blinker=1.4=py38_0
   - brotlipy=0.7.0=py38h7b6447c_1000
   - c-ares=1.16.1=h7b6447c_0
-  - ca-certificates=2020.10.14=0
+  - ca-certificates=2020.12.8=h06a4308_0
   - cachetools=4.1.1=py_0
-  - certifi=2020.6.20=pyhd3eb1b0_3
+  - certifi=2020.12.5=py38h06a4308_0
   - cffi=1.14.3=py38he30daa8_0
   - chardet=3.0.4=py38_1003
   - click=7.1.2=py_0
@@ -35,15 +35,18 @@ dependencies:
   - dbus=1.13.18=hb2f20db_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
+  - dill=0.3.3=pyhd3eb1b0_0
   - entrypoints=0.3=py38_0
   - expat=2.2.10=he6710b0_2
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.10.4=h5ab3b9f_0
+  - future=0.18.2=py38_1
   - gast=0.3.3=py_0
   - glib=2.66.1=h92f7085_0
   - google-auth=1.22.1=py_0
   - google-auth-oauthlib=0.4.1=py_2
   - google-pasta=0.2.0=py_0
+  - googleapis-common-protos=1.52.0=py38_0
   - grpcio=1.31.0=py38hf8bcb03_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb31296c_0
@@ -70,6 +73,8 @@ dependencies:
   - jupyter_console=6.2.0=py_0
   - jupyter_core=4.6.3=py38_0
   - jupyterlab_pygments=0.1.2=py_0
+  - keras=2.4.3=0
+  - keras-base=2.4.3=py_0
   - keras-preprocessing=1.1.0=py_1
   - kiwisolver=1.2.0=py38hfd86e86_0
   - lazy-object-proxy=1.4.3=py38h7b6447c_0
@@ -110,7 +115,7 @@ dependencies:
   - numpy-base=1.19.1=py38hfa32c7d_0
   - oauthlib=3.1.0=py_0
   - olefile=0.46=py_0
-  - openssl=1.1.1h=h7b6447c_0
+  - openssl=1.1.1i=h27cfd23_0
   - opt_einsum=3.1.0=py_0
   - packaging=20.4=py_0
   - pandoc=2.11=hb0f4dca_0
@@ -122,9 +127,11 @@ dependencies:
   - pillow=8.0.1=py38he98fc37_0
   - pip=20.2.4=py38_0
   - prometheus_client=0.8.0=py_0
+  - promise=2.3=py38_0
   - prompt-toolkit=3.0.8=py_0
   - prompt_toolkit=3.0.8=0
   - protobuf=3.13.0.1=py38he6710b0_1
+  - psutil=5.7.2=py38h7b6447c_0
   - ptyprocess=0.6.0=py38_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.8=py_0
@@ -161,8 +168,10 @@ dependencies:
   - tensorboard-plugin-wit=1.6.0=py_0
   - tensorflow=2.2.0=gpu_py38hb782248_0
   - tensorflow-base=2.2.0=gpu_py38h83e3d50_0
+  - tensorflow-datasets=1.2.0=py38_0
   - tensorflow-estimator=2.2.0=pyh208ff02_0
   - tensorflow-gpu=2.2.0=h0d30ee6_0
+  - tensorflow-metadata=0.14.0=pyhe6710b0_1
   - termcolor=1.1.0=py38_1
   - terminado=0.9.1=py38_0
   - testpath=0.4.4=py_0
@@ -172,6 +181,7 @@ dependencies:
   - toml=0.10.1=py_0
   - toolz=0.11.1=py_0
   - tornado=6.0.4=py38h7b6447c_1
+  - tqdm=4.55.1=pyhd3eb1b0_0
   - traitlets=5.0.5=py_0
   - urllib3=1.25.11=py_0
   - wcwidth=0.2.5=py_0
